mod a ui proyectos

--- a/projects/portafolio_daniel.html
+++ b/projects/portafolio_daniel.html
@@ -111,7 +111,7 @@
           <p>PAGINA WEB</p>
         </div>
         <div class="titulo">
-          <h1 translate="no">PORTAFOLIO DANIEL</h1>
+          <h1 translate="no">Portafolio daniel</h1>
         </div>
         <div class="parrafo">
           <p>DAVID DANIEL</p>
@@ -132,7 +132,7 @@
 
     <!-- .3 acerca del proyecto -->
     <section class="cont_acercadelproyecto">
-      <h3>ACERCA DEL PROYECTO</h3>
+      <h3>Acerca del proyecto</h3>
       <div class="cont_data_proyecto">
         <div class="data">
           <div class="cont_dato">
@@ -140,13 +140,14 @@
             <p class="dato">DESARROLLO</p>
           </div>
           <div class="cont_dato">
-            <p class="titulo">Año</p>
-            <p class="dato">2024</p>
-          </div>
-          <div class="cont_dato">
-            <p class="titulo">Tipo de producto</p>
+            <p class="titulo">Tipo</p>
             <p class="dato">WEB</p>
           </div>
+          <div class="cont_dato">
+            <p class="titulo">Fecha</p>
+            <p class="dato">02-05-2024</p>
+          </div>
+
         </div>
         <div class="data_proyecto">
           Pagina web de un portafolio echo para un desarrollador full-stack con
