add iconos a data de seccion acerca del proyecto

--- a/projects/portafolio_daniel.html
+++ b/projects/portafolio_daniel.html
@@ -136,16 +136,28 @@
       <div class="cont_data_proyecto">
         <div class="data">
           <div class="cont_dato">
+  
             <p class="titulo">Área</p>
-            <p class="dato">DESARROLLO</p>
+            <p class="dato">Desarrollo</p>
+            <div class="cont_icon">
+              <img src="../assets/img/iconosproyectos/iconodesarrollo.svg" alt="">
+            </div>
           </div>
           <div class="cont_dato">
+
             <p class="titulo">Tipo</p>
-            <p class="dato">WEB</p>
+            <p class="dato">Web</p>
+            <div class="cont_icon">
+              <img src="../assets/img/iconosproyectos/iconoweb.svg" alt="">
+            </div>
           </div>
           <div class="cont_dato">
+
             <p class="titulo">Fecha</p>
             <p class="dato">02-05-2024</p>
+            <div class="cont_icon">
+              <img src="../assets/img/iconosproyectos/iconofecha.svg" alt="">
+            </div>
           </div>
 
         </div>
