add animacion de scroll

--- a/projects/portafolio_daniel.html
+++ b/projects/portafolio_daniel.html
@@ -22,262 +22,266 @@
     <title>Proyecto portafolio Daniel</title>
   </head>
 
-  <body class="body_proyecto">
+  <body id="proyecto_scroll" class="body_proyecto">
     <div class="cursor"></div>
-    <!-- Menu -->
-    <section class="conte__menui">
-      <header class="header__index">
-        <div class="cont__logo__nav">
-          <a href="../pages/inicio.html">
-            <lottie-player
-              id="logo"
-              src="../assets/img/logoanimado.json"
-              speed="1"
-              style="width: 100px"
-              autoplay
+    <div id="cont_proyectos_scrolls" class="cont_proyectos_scrolls">
+
+      <!-- Menu -->
+      <section class="conte__menui">
+        <header class="header__index">
+          <div class="cont__logo__nav">
+            <a href="../pages/inicio.html">
+              <lottie-player
+                id="logo"
+                src="../assets/img/logoanimado.json"
+                speed="1"
+                style="width: 100px"
+                autoplay
+              >
+              </lottie-player>
+            </a>
+          </div>
+          <div class="icono-menu">
+            <div class="bars__menu">
+              <span class="line1__bars-menu"></span>
+              <span class="line2__bars-menu"></span>
+              <span class="line3__bars-menu"></span>
+            </div>
+          </div>
+        </header>
+        <div class="contendor_activo_de_menu">
+          <div class="list_menu">
+            <ul class="lista_uno">
+              <div class="cont_opcion_lista">
+                <a style="color: #b8b8b8"
+                  >Home
+                  <p>(01)</p>
+                </a>
+              </div>
+
+              <div class="cont_opcion_lista">
+                <a translate="no" href="/pages/p_ux_ui.html"
+                  >UX - UI
+                  <p>(02)</p>
+                </a>
+              </div>
+
+              <div class="cont_opcion_lista">
+                <a href="/pages/p_ux_developer.html"
+                  >Frontend
+                  <p>(03)</p>
+                </a>
+              </div>
+
+              <div class="cont_opcion_lista">
+                <a translate="no" href="/pages/p_ux_writing.html"
+                  >UX - Writing
+                  <p>(04)</p>
+                </a>
+              </div>
+
+              <div class="cont_opcion_lista">
+                <a translate="no" href="/pages/p_ux_research.html"
+                  >UX - Research
+                  <p>(05)</p>
+                </a>
+              </div>
+            </ul>
+
+            <a
+              class="boton_contactar"
+              href="https://wa.me/573215841003?text=Hola%20%F0%9F%91%8B%20jaksin,%20estuve%20viendo%20%F0%9F%91%80%20tu%20portafolio%20%F0%9F%92%BC%20,%20me%20gustaria%20platicar%20contigo"
+              target="_blank"
+              >CONTACTAME</a
             >
-            </lottie-player>
-          </a>
-        </div>
-        <div class="icono-menu">
-          <div class="bars__menu">
-            <span class="line1__bars-menu"></span>
-            <span class="line2__bars-menu"></span>
-            <span class="line3__bars-menu"></span>
+
+            <div class="list_social">
+              <a href="https://www.linkedin.com/in/jaksin-sains-vasquez/"
+                >LinkedIn</a
+              >
+              <a href="https://www.facebook.com/yaksin.vasques.5/">Facebook</a>
+              <a href="https://www.instagram.com/yakhsin/">Instagram</a>
+            </div>
           </div>
         </div>
-      </header>
-      <div class="contendor_activo_de_menu">
-        <div class="list_menu">
-          <ul class="lista_uno">
-            <div class="cont_opcion_lista">
-              <a style="color: #b8b8b8"
-                >Home
-                <p>(01)</p>
-              </a>
-            </div>
-
-            <div class="cont_opcion_lista">
-              <a translate="no" href="/pages/p_ux_ui.html"
-                >UX - UI
-                <p>(02)</p>
-              </a>
-            </div>
-
-            <div class="cont_opcion_lista">
-              <a href="/pages/p_ux_developer.html"
-                >Frontend
-                <p>(03)</p>
-              </a>
-            </div>
-
-            <div class="cont_opcion_lista">
-              <a translate="no" href="/pages/p_ux_writing.html"
-                >UX - Writing
-                <p>(04)</p>
-              </a>
-            </div>
-
-            <div class="cont_opcion_lista">
-              <a translate="no" href="/pages/p_ux_research.html"
-                >UX - Research
-                <p>(05)</p>
-              </a>
-            </div>
-          </ul>
-
-          <a
-            class="boton_contactar"
-            href="https://wa.me/573215841003?text=Hola%20%F0%9F%91%8B%20jaksin,%20estuve%20viendo%20%F0%9F%91%80%20tu%20portafolio%20%F0%9F%92%BC%20,%20me%20gustaria%20platicar%20contigo"
-            target="_blank"
-            >CONTACTAME</a
-          >
-
-          <div class="list_social">
-            <a href="https://www.linkedin.com/in/jaksin-sains-vasquez/"
-              >LinkedIn</a
-            >
-            <a href="https://www.facebook.com/yaksin.vasques.5/">Facebook</a>
-            <a href="https://www.instagram.com/yakhsin/">Instagram</a>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <!-- .1 inicio -->
-    <section class="cont_inicios">
-      <div class="colum_unos">
-        <div class="tipo">
-          <p>PAGINA WEB</p>
-        </div>
-        <div class="titulo">
-          <h1 translate="no">Portafolio daniel</h1>
-        </div>
-        <div class="parrafo">
-          <p>DAVID DANIEL</p>
-        </div>
-      </div>
-      <!-- .2 banner -->
-      <section class="cont_banner">
-        <video
-          class="video_pro_jannier"
-          autoplay
-          muted
-          playsinline
-          loop
-          src="../assets/img/vidprojannier.mp4"
-        ></video>
       </section>
-    </section>
 
-    <!-- .3 acerca del proyecto -->
-    <section class="cont_acercadelproyecto">
-      <h3>Acerca del proyecto</h3>
-      <div class="cont_data_proyecto">
-        <div class="data">
-          <div class="cont_dato">
-  
-            <p class="titulo">Área</p>
-            <p class="dato">Desarrollo</p>
-            <div class="cont_icon">
-              <img src="../assets/img/iconosproyectos/iconodesarrollo.svg" alt="">
-            </div>
+      <!-- .1 inicio -->
+      <section class="cont_inicios">
+        <div class="colum_unos">
+          <div class="tipo">
+            <p>PAGINA WEB</p>
           </div>
-          <div class="cont_dato">
-
-            <p class="titulo">Tipo</p>
-            <p class="dato">Web</p>
-            <div class="cont_icon">
-              <img src="../assets/img/iconosproyectos/iconoweb.svg" alt="">
-            </div>
+          <div class="titulo">
+            <h1 translate="no">Portafolio daniel</h1>
           </div>
-          <div class="cont_dato">
-
-            <p class="titulo">Fecha</p>
-            <p class="dato">02-05-2024</p>
-            <div class="cont_icon">
-              <img src="../assets/img/iconosproyectos/iconofecha.svg" alt="">
-            </div>
-          </div>
-
-        </div>
-        <div class="data_proyecto">
-          Pagina web de un portafolio echo para un desarrollador full-stack con
-          2 vistas totalmente responsive, Estilo minimalista y limpio con paleta
-          tri-color y multitono, fuentes largas y san serif estilo urbano y en
-          contraste al blanco.
-        </div>
-      </div>
-    </section>
-
-    <!-- .4 paleta de colores -->
-    <section class="cont_paletadecolores">
-      <h3>PALETA DE COLORES</h3>
-      <div class="cont_cont_colores">
-        <div class="color_uno">
-          <p class="titulo" content="notranslate">Background</p>
-          <p>#FFFFFF</p>
-        </div>
-
-        <div class="color_segundario">
-          <div class="color_dos">
-            <p class="titulo">Acciones</p>
-            <p>#FF4D00</p>
-          </div>
-          <div class="color_tres">
-            <p class="titulo">Contraste de fuente</p>
-            <p>#303030</p>
-          </div>
-          <div class="color_cuatro">
-            <p class="titulo">Fuente</p>
-            <p>#000000</p>
+          <div class="parrafo">
+            <p>DAVID DANIEL</p>
           </div>
         </div>
-      </div>
-    </section>
-
-    <!-- .5 fuente -->
-    <section class="cont_fuentes" content="notranslate">
-      <h3>TIPOGRAFIAS</h3>
-
-      <div class="fuente">
-        <p>Primera Fuente</p>
-        <img class="img_font" src="../assets/img/monasans.svg" alt="" />
-        <div class="cont_fuentess">
-          <div class="cont_font">
-            <img src="../assets/img/blackwide.svg" alt="" />
-            <p class="nombre_fuente">Black Wide</p>
-          </div>
-          <div class="cont_font">
-            <img src="../assets/img/boldwide.svg" alt="" />
-            <p class="nombre_fuente">Bold Wide</p>
-          </div>
-          <div class="cont_font">
-            <img src="../assets/img/mediumwide.svg" alt="" />
-            <p class="nombre_fuente">Medium Wide</p>
-          </div>
-          <div class="cont_font">
-            <img src="../assets/img/regularwide.svg" alt="" />
-            <p class="nombre_fuente">Regular Wide</p>
-          </div>
-          <div class="cont_font">
-            <img src="../assets/img/lightwide.svg" alt="" />
-            <p class="nombre_fuente">Light Wide</p>
-          </div>
-        </div>
-      </div>
-
-      <div class="fuente">
-        <p>Segunda Fuente</p>
-        <img class="img_font" src="../assets/img/monanarrow.svg" alt="" />
-        <div class="cont_fuentess">
-          <div class="cont_font">
-            <img src="../assets/img/blacknarrow.svg" alt="" />
-            <p class="nombre_fuente">Black Narrow</p>
-          </div>
-          <div class="cont_font">
-            <img src="../assets/img/boldnarrow.svg" alt="" />
-            <p class="nombre_fuente">Bold Narrow</p>
-          </div>
-          <div class="cont_font">
-            <img src="../assets/img/mediumnarrow.svg" alt="" />
-            <p class="nombre_fuente">Medium Narrow</p>
-          </div>
-          <div class="cont_font">
-            <img src="../assets/img/regularnarrow.svg" alt="" />
-            <p class="nombre_fuente">Regular Narrow</p>
-          </div>
-          <div class="cont_font">
-            <img src="../assets/img/lightnarrow.svg" alt="" />
-            <p class="nombre_fuente">Light Narrow</p>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <!-- .6 imagenes -->
-    <section class="cont_img">
-      <div class="cont_img_grup">
-        <div class="cont_img_uno">
-          <img src="../assets/img/mockupjannieruno.jpg" alt="" />
-        </div>
-        <div class="cont_img_dos">
+        <!-- .2 banner -->
+        <section class="cont_banner">
           <video
+            class="video_pro_jannier"
             autoplay
             muted
             playsinline
             loop
-            src="../assets/img/janiericonos.mp4"
+            src="../assets/img/vidprojannier.mp4"
           ></video>
+        </section>
+      </section>
+
+      <!-- .3 acerca del proyecto -->
+      <section id="unop" class="cont_acercadelproyecto">
+        <h3>Acerca del proyecto</h3>
+        <div class="cont_data_proyecto">
+          <div class="data">
+            <div class="cont_dato">
+              <p class="titulo">Área</p>
+              <p class="dato">Desarrollo</p>
+              <div class="cont_icon">
+                <img
+                  src="../assets/img/iconosproyectos/iconodesarrollo.svg"
+                  alt=""
+                />
+              </div>
+            </div>
+            <div class="cont_dato">
+              <p class="titulo">Tipo</p>
+              <p class="dato">Web</p>
+              <div class="cont_icon">
+                <img src="../assets/img/iconosproyectos/iconoweb.svg" alt="" />
+              </div>
+            </div>
+            <div class="cont_dato">
+              <p class="titulo">Fecha</p>
+              <p class="dato">02-05-2024</p>
+              <div class="cont_icon">
+                <img
+                  src="../assets/img/iconosproyectos/iconofecha.svg"
+                  alt=""
+                />
+              </div>
+            </div>
+          </div>
+          <div class="data_proyecto">
+            Pagina web de un portafolio echo para un desarrollador full-stack
+            con 2 vistas totalmente responsive, Estilo minimalista y limpio con
+            paleta tri-color y multitono, fuentes largas y san serif estilo
+            urbano y en contraste al blanco.
+          </div>
         </div>
+      </section>
+
+      <!-- .4 paleta de colores -->
+      <section id="dosp" class="cont_paletadecolores">
+        <h3>Paleta de colores</h3>
+        <div class="cont_cont_colores">
+          <div style="background: #ffffff" class="cont_color_uno">
+            <p style="color: #000000" class="titulo" content="notranslate">
+              Background
+            </p>
+            <p style="color: #000000">#FFFFFF</p>
+          </div>
+          <div style="background: #ff4d00" class="cont_color_uno">
+            <p class="titulo">Primario</p>
+            <p>#FF4D00</p>
+          </div>
+          <div style="background: #303030" class="cont_color_uno">
+            <p class="titulo">segundario</p>
+            <p>#303030</p>
+          </div>
+          <div style="background: #000000" class="cont_color_uno">
+            <p class="titulo">Fuente</p>
+            <p>#000000</p>
+          </div>
+        </div>
+      </section>
+
+      <!-- .5 fuente -->
+      <section id="tresp" class="cont_fuentes" content="notranslate">
+        <h3>Tipografia</h3>
+
+        <div class="fuente">
+          <p>Primera Fuente</p>
+          <img class="img_font" src="../assets/img/monasans.svg" alt="" />
+          <div class="cont_fuentess">
+            <div class="cont_font">
+              <img src="../assets/img/blackwide.svg" alt="" />
+              <p class="nombre_fuente">Black Wide</p>
+            </div>
+            <div class="cont_font">
+              <img src="../assets/img/boldwide.svg" alt="" />
+              <p class="nombre_fuente">Bold Wide</p>
+            </div>
+            <div class="cont_font">
+              <img src="../assets/img/mediumwide.svg" alt="" />
+              <p class="nombre_fuente">Medium Wide</p>
+            </div>
+            <div class="cont_font">
+              <img src="../assets/img/regularwide.svg" alt="" />
+              <p class="nombre_fuente">Regular Wide</p>
+            </div>
+            <div class="cont_font">
+              <img src="../assets/img/lightwide.svg" alt="" />
+              <p class="nombre_fuente">Light Wide</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="fuente">
+          <p>Segunda Fuente</p>
+          <img class="img_font" src="../assets/img/monanarrow.svg" alt="" />
+          <div class="cont_fuentess">
+            <div class="cont_font">
+              <img src="../assets/img/blacknarrow.svg" alt="" />
+              <p class="nombre_fuente">Black Narrow</p>
+            </div>
+            <div class="cont_font">
+              <img src="../assets/img/boldnarrow.svg" alt="" />
+              <p class="nombre_fuente">Bold Narrow</p>
+            </div>
+            <div class="cont_font">
+              <img src="../assets/img/mediumnarrow.svg" alt="" />
+              <p class="nombre_fuente">Medium Narrow</p>
+            </div>
+            <div class="cont_font">
+              <img src="../assets/img/regularnarrow.svg" alt="" />
+              <p class="nombre_fuente">Regular Narrow</p>
+            </div>
+            <div class="cont_font">
+              <img src="../assets/img/lightnarrow.svg" alt="" />
+              <p class="nombre_fuente">Light Narrow</p>
+            </div>
+          </div>
+        </div>
+      </section>
+
       </div>
-      <div class="cont_img_tres">
-        <img src="../assets/img/bannertres.png" alt="img_tres" />
-      </div>
+      
+    <!-- .6 imagenes -->
+    <section class="cont_img">
+        <div class="cont_img_grup">
+          <div class="cont_img_uno">
+            <img src="../assets/img/mockupjannieruno.jpg" alt="" />
+          </div>
+          <div class="cont_img_dos">
+            <video
+              autoplay
+              muted
+              playsinline
+              loop
+              src="../assets/img/janiericonos.mp4"
+            ></video>
+          </div>
+        </div>
+        <div class="cont_img_tres">
+          <img src="../assets/img/bannertres.png" alt="img_tres" />
+        </div>
     </section>
 
     <!-- *. pie de pagina -->
-
     <section class="pie_de_pagina">
       <div class="cont_barra_links_pie">
         <div
@@ -322,6 +326,8 @@
     <!-- javascripts -->
     <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
+    <script src="../js/logica_scroll_cont_skills.js"></script>
     <script src="../js/scroll.js"></script>
   </body>
 </html>
