--- a/projects/portafolio_daniel.html
+++ b/projects/portafolio_daniel.html
@@ -328,6 +328,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
     <script src="../js/logica_scroll_cont_skills.js"></script>
-    <script src="../js/scroll.js"></script>
+    <script src="../js/script.js"></script>
   </body>
 </html>
