mod scroll animation loading

--- a/pages/inicio.html
+++ b/pages/inicio.html
@@ -112,107 +112,108 @@
     </section>
 
     <section class="animacion_loading">
+
       <ul>
-        <li class="n01">01</li>
-        <li class="n02">02</li>
-        <li class="n03">03</li>
-        <li class="n04">04</li>
-        <li class="n05">05</li>
-        <li class="n06">06</li>
-        <li class="n07">07</li>
-        <li class="n08">08</li>
-        <li class="n09">09</li>
-        <li class="n10">10</li>
-        <li class="n11">11</li>
-        <li class="n12">12</li>
-        <li class="n13">13</li>
-        <li class="n14">14</li>
-        <li class="n15">15</li>
-        <li class="n16">16</li>
-        <li class="n17">17</li>
-        <li class="n18">18</li>
-        <li class="n19">19</li>
-        <li class="n20">20</li>
-        <li class="n21">21</li>
-        <li class="n22">22</li>
-        <li class="n23">23</li>
-        <li class="n24">24</li>
-        <li class="n25">25</li>
-        <li class="n26">26</li>
-        <li class="n27">27</li>
-        <li class="n28">28</li>
-        <li class="n29">29</li>
-        <li class="n30">30</li>
-        <li class="n31">31</li>
-        <li class="n32">32</li>
-        <li class="n33">33</li>
-        <li class="n34">34</li>
-        <li class="n35">35</li>
-        <li class="n36">36</li>
-        <li class="n37">37</li>
-        <li class="n38">38</li>
-        <li class="n39">39</li>
-        <li class="n40">40</li>
-        <li class="n41">41</li>
-        <li class="n42">42</li>
-        <li class="n43">43</li>
-        <li class="n44">44</li>
-        <li class="n45">45</li>
-        <li class="n46">46</li>
-        <li class="n47">47</li>
-        <li class="n48">48</li>
-        <li class="n49">49</li>
-        <li class="n50">50</li>
-        <li class="n51">51</li>
-        <li class="n52">52</li>
-        <li class="n53">53</li>
-        <li class="n54">54</li>
-        <li class="n55">55</li>
-        <li class="n56">56</li>
-        <li class="n57">57</li>
-        <li class="n58">58</li>
-        <li class="n59">59</li>
-        <li class="n60">60</li>
-        <li class="n61">61</li>
-        <li class="n62">62</li>
-        <li class="n63">63</li>
-        <li class="n64">64</li>
-        <li class="n65">65</li>
-        <li class="n66">66</li>
-        <li class="n67">67</li>
-        <li class="n68">68</li>
-        <li class="n69">69</li>
-        <li class="n70">70</li>
-        <li>71</li>
-        <li>72</li>
-        <li>73</li>
-        <li>74</li>
-        <li>75</li>
-        <li class="n76">76</li>
-        <li class="n77">77</li>
-        <li>78</li>
-        <li>79</li>
-        <li>80</li>
-        <li>81</li>
-        <li class="n82">82</li>
-        <li class="n83">83</li>
-        <li class="n84">84</li>
-        <li class="n85">85</li>
-        <li class="n86">86</li>
-        <li>87</li>
-        <li>88</li>
-        <li>89</li>
-        <li>90</li>
-        <li>91</li>
-        <li>92</li>
-        <li>93</li>
-        <li>94</li>
-        <li>95</li>
-        <li>96</li>
-        <li>97</li>
-        <li class="n98">98</li>
-        <li class="n99">99</li>
-        <li class="n100">100</li>
+        <li class="n01">01%</li>
+        <li class="n02">02%</li>
+        <li class="n03">03%</li>
+        <li class="n04">04%</li>
+        <li class="n05">05%</li>
+        <li class="n06">06%</li>
+        <li class="n07">07%</li>
+        <li class="n08">08%</li>
+        <li class="n09">09%</li>
+        <li class="n10">10%</li>
+        <li class="n11">11%</li>
+        <li class="n12">12%</li>
+        <li class="n13">13%</li>
+        <li class="n14">14%</li>
+        <li class="n15">15%</li>
+        <li class="n16">16%</li>
+        <li class="n17">17%</li>
+        <li class="n18">18%</li>
+        <li class="n19">19%</li>
+        <li class="n20">20%</li>
+        <li class="n21">21%</li>
+        <li class="n22">22%</li>
+        <li class="n23">23%</li>
+        <li class="n24">24%</li>
+        <li class="n25">25%</li>
+        <li class="n26">26%</li>
+        <li class="n27">27%</li>
+        <li class="n28">28%</li>
+        <li class="n29">29%</li>
+        <li class="n30">30%</li>
+        <li class="n31">31%</li>
+        <li class="n32">32%</li>
+        <li class="n33">33%</li>
+        <li class="n34">34%</li>
+        <li class="n35">35%</li>
+        <li class="n36">36%</li>
+        <li class="n37">37%</li>
+        <li class="n38">38%</li>
+        <li class="n39">39%</li>
+        <li class="n40">40%</li>
+        <li class="n41">41%</li>
+        <li class="n42">42%</li>
+        <li class="n43">43%</li>
+        <li class="n44">44%</li>
+        <li class="n45">45%</li>
+        <li class="n46">46%</li>
+        <li class="n47">47%</li>
+        <li class="n48">48%</li>
+        <li class="n49">49%</li>
+        <li class="n50">50%</li>
+        <li class="n51">51%</li>
+        <li class="n52">52%</li>
+        <li class="n53">53%</li>
+        <li class="n54">54%</li>
+        <li class="n55">55%</li>
+        <li class="n56">56%</li>
+        <li class="n57">57%</li>
+        <li class="n58">58%</li>
+        <li class="n59">59%</li>
+        <li class="n60">60%</li>
+        <li class="n61">61%</li>
+        <li class="n62">62%</li>
+        <li class="n63">63%</li>
+        <li class="n64">64%</li>
+        <li class="n65">65%</li>
+        <li class="n66">66%</li>
+        <li class="n67">67%</li>
+        <li class="n68">68%</li>
+        <li class="n69">69%</li>
+        <li class="n70">70%</li>
+        <li>71%</li>
+        <li>72%</li>
+        <li>73%</li>
+        <li>74%</li>
+        <li>75%</li>
+        <li class="n76">76%</li>
+        <li class="n77">77%</li>
+        <li>78%</li>
+        <li>79%</li>
+        <li>80%</li>
+        <li>81%</li>
+        <li class="n82">82%</li>
+        <li class="n83">83%</li>
+        <li class="n84">84%</li>
+        <li class="n85">85%</li>
+        <li class="n86">86%</li>
+        <li>87%</li>
+        <li>88%</li>
+        <li>89%</li>
+        <li>90%</li>
+        <li>91%</li>
+        <li>92%</li>
+        <li>93%</li>
+        <li>94%</li>
+        <li>95%</li>
+        <li>96%</li>
+        <li>97%</li>
+        <li class="n98">98%</li>
+        <li class="n99">99%</li>
+        <li class="n100">100%</li>
     </ul>
 
     </section>
