add ajustes animacion loading

--- a/pages/inicio.html
+++ b/pages/inicio.html
@@ -33,6 +33,9 @@
     <div class="cursor"></div>
 
     <section class="conte__menui">
+      <div class="cuadrodecargado">
+
+      </div>
       <header class="header__index">
         <div class="cont__logo__nav">
           <a href="./inicio.html">
@@ -113,7 +116,7 @@
 
     <section class="animacion_loading">
 
-      <ul>
+    <ul>
         <li class="n01">01%</li>
         <li class="n02">02%</li>
         <li class="n03">03%</li>
@@ -220,15 +223,18 @@
 
     <section class="seccion_inicio">
       <div class="cont_primera_columna_inicio">
+
         <div class="columna_titulo">
+          <div class="cuadrodecargado">
+          </div>
           <h1>SOY EL DISEÑADOR UX - UI QUE BUSCAS</h1>
           <p>
             Bienvenido a mi portafolio, aqui podras encontrar mis ultimos
             trabajos y referencias laborales.
           </p>
           <a
-            class="boton_hablemos"
-            class="boton_contactar"
+            class="boton_hablemos cursor-scale small"
+            class="boton_contactar "
             href="https://wa.me/573215841003?text=Hola%20%F0%9F%91%8B%20jaksin,%20estuve%20viendo%20%F0%9F%91%80%20tu%20portafolio%20%F0%9F%92%BC%20,%20me%20gustaria%20platicar%20contigo"
             target="_blank"
             >Hablemos</a
@@ -236,6 +242,8 @@
         </div>
 
         <div class="cont_pie_titulo">
+          <div class="cuadrodecargado">
+          </div>
           <div class="contadores">
             <div class="cont_uno">
               <h4 class="valor_cont_uno">+15</h4>
@@ -252,6 +260,8 @@
         </div>
       </div>
       <div class="columna_video">
+        <div class="cuadrodecargado">
+        </div>
         <img src="/assets/img/videopolis.gif" alt="" />
       </div>
     </section>
@@ -990,7 +1000,7 @@
             <a
               href="https://wa.me/573215841003?text=Hola%20%F0%9F%91%8B%20jaksin,%20estuve%20viendo%20%F0%9F%91%80%20tu%20portafolio%20%F0%9F%92%BC%20,%20me%20gustaria%20platicar%20contigo"
               target="_blank"
-              ><strong>Contactame</strong></a
+              ><strong class="ccontactame cursor-scale small">Contactame</strong></a
             >
           </p>
         </div>
