--- a/pages/inicio.html
+++ b/pages/inicio.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="google" content="notranslate" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
@@ -27,6 +28,19 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
     <title>Dsains</title>
+    <script>
+      if ('scrollRestoration' in history) {
+          history.scrollRestoration = 'manual';
+      }
+      window.addEventListener('load', function() {
+          window.scrollTo(0, 0);
+      });
+  </script>
+    <script>
+      window.addEventListener('beforeunload', function () {
+          window.scrollTo(0, 0);
+      });
+  </script>
   </head>
 
   <body class="body_inicio">
