ajuste inicio proteyestos

--- a/pages/inicio.html
+++ b/pages/inicio.html
@@ -251,8 +251,7 @@
             class="boton_contactar "
             href="https://wa.me/573215841003?text=Hola%20%F0%9F%91%8B%20jaksin,%20estuve%20viendo%20%F0%9F%91%80%20tu%20portafolio%20%F0%9F%92%BC%20,%20me%20gustaria%20platicar%20contigo"
             target="_blank"
-            >Hablemos</a
-          >
+            >Hablemos</a>
         </div>
 
         <div class="cont_pie_titulo">
