--- a/projects/portafolio_daniel.html
+++ b/projects/portafolio_daniel.html
@@ -109,6 +109,9 @@
       <!-- .1 inicio -->
       <section class="cont_inicios">
         <div class="colum_unos">
+          <div class="cont_titulo">
+
+          
           <div class="tipo">
             <p>PAGINA WEB</p>
           </div>
@@ -116,8 +119,25 @@
             <h1 translate="no">Portafolio daniel</h1>
           </div>
           <div class="parrafo">
-            <p>DAVID DANIEL</p>
+            <a class="cursor-scale small"
+            class="boton_contactar "
+            href="https://dsilgadosalcedo.vercel.app/"
+            target="_blank"
+            >Ir a proyecto</a>
           </div>
+
+          </div>
+
+          <Div class="pie_titulo">
+            <div class="cont_titulo_pie">
+              <h4 class="titulou">Presupuesto</h4>
+              <p class="titulo_valor">USD <strong class="simbolo">$</strong>125</p>
+            </div>
+            <div class="cont_titulo_pie" style="border-left: 1px solid black;">
+              <h4 class="titulou">Tiempo de entraga</h4>
+              <p class="titulo_valor">2 semanas</p>
+            </div>
+          </Div>
         </div>
         <!-- .2 banner -->
         <section class="cont_banner">
