add section ultimos proyectos

--- a/pages/inicio.html
+++ b/pages/inicio.html
@@ -980,6 +980,38 @@
       </div>
     </section>
 
+    <section class="cont_mis_ultimos_proyectos">
+
+      <div class="titulo_ultimos_proyectos">
+        <h4>ULTIMOS PROYECTOS</h4>
+      </div>
+
+      <div class="cont_de_proyectos">
+
+        <a href="/projects/portafolio_daniel.html"  class="proyecto  cursor-scale small">
+          <p> Portafolio daniel</p>
+          <img src="/assets/img/mockupjannieruno.jpg" alt="">
+        </a>
+
+        <a href="/projects/portafolio_daniel.html"  class="proyecto  cursor-scale small">
+          <p> Portafolio daniel</p>
+          <img src="/assets/img/mockupjannieruno.jpg" alt="">
+        </a>
+
+        <a href="/projects/portafolio_daniel.html"  class="proyecto  cursor-scale small">
+          <p> Portafolio daniel</p>
+          <img src="/assets/img/mockupjannieruno.jpg" alt="">
+        </a>
+
+        <a href="/projects/portafolio_daniel.html"  class="proyecto  cursor-scale small">
+          <p> Portafolio daniel</p>
+          <img src="/assets/img/mockupjannieruno.jpg" alt="">
+        </a>
+        
+      </div>
+
+    </section>
+
     <section class="pie_de_pagina">
       <div class="cont_barra_links_pie">
         <div
@@ -1034,4 +1066,3 @@
     <script src="../js/script.js"></script>
   </body>
 </html>
-3
