add nueva seccion de ultimos proyectos

--- a/pages/inicio.html
+++ b/pages/inicio.html
@@ -81,28 +81,28 @@
               </a>
             </div>
 
-            <div class="cont_opcion_lista">
+            <div class="cont_opcion_lista cursor-scale small">
               <a translate="no" href="/pages/p_ux_ui.html"
                 >UX - UI
                 <p>(02)</p>
               </a>
             </div>
 
-            <div class="cont_opcion_lista">
+            <div class="cont_opcion_lista cursor-scale small">
               <a href="/pages/p_ux_developer.html"
                 >Frontend
                 <p>(03)</p>
               </a>
             </div>
 
-            <div class="cont_opcion_lista">
+            <div class="cont_opcion_lista cursor-scale small">
               <a translate="no" href="/pages/p_ux_writing.html"
                 >UX - Writing
                 <p>(04)</p>
               </a>
             </div>
 
-            <div class="cont_opcion_lista">
+            <div class="cont_opcion_lista cursor-scale small">
               <a translate="no" href="/pages/p_ux_research.html"
                 >UX - Research
                 <p>(05)</p>
@@ -111,7 +111,7 @@
           </ul>
 
           <a
-            class="boton_contactar"
+            class="boton_contactar cursor-scale small"
             href="https://wa.me/573215841003?text=Hola%20%F0%9F%91%8B%20jaksin,%20estuve%20viendo%20%F0%9F%91%80%20tu%20portafolio%20%F0%9F%92%BC%20,%20me%20gustaria%20platicar%20contigo"
             target="_blank"
             >CONTACTAME</a
@@ -364,10 +364,6 @@
           <img src="/assets/img/fondofoto.svg" alt="" />
         </div>
 
-        <div class="img_fondo_foto_dos">
-          <img src="/assets/img/fondofoto.svg" alt="" />
-        </div>
-
         <img class="foto_jaksin" src="/assets/img/fotojaksin.png" alt="" />
       </div>
 
@@ -379,6 +375,57 @@
             De Edad Y 4 Años De Experiencia, Diseñador Ux - Ui, Especialista En
             Ux Research , Ux Writing, Dev Jr Web - Móvil Y Motion Designer.
           </p>
+        </div>
+
+        <div class="colum_unos">
+          <div class="cinta_colum_uno">
+            <div class="slider_inicio">
+              <div translate="no" class="slide-track">
+                <div class="slide">
+                  <p>DISEÑADOR</p>
+                </div>
+                <div class="slide">
+                  <p>UX - UI</p>
+                </div>
+                <div class="slide">
+                  <p>DISEÑADOR</p>
+                </div>
+                <div class="slide">
+                  <p>UX - UI</p>
+                </div>
+                <div class="slide">
+                  <p>DISEÑADOR</p>
+                </div>
+                <div class="slide">
+                  <p>UX - UI</p>
+                </div>
+                <div class="slide">
+                  <p>DISEÑADOR</p>
+                </div>
+                <div class="slide">
+                  <p>UX - UI</p>
+                </div>
+                <div class="slide">
+                  <p>DISEÑADOR</p>
+                </div>
+                <div class="slide">
+                  <p>UX - UI</p>
+                </div>
+                <div class="slide">
+                  <p>DISEÑADOR</p>
+                </div>
+                <div class="slide">
+                  <p>UX - UI</p>
+                </div>
+              </div>
+            </div>
+          </div>
+  
+          <div class="img_fondo_fotos">
+            <img src="/assets/img/fondofoto.svg" alt="" />
+          </div>
+  
+          <img class="foto_jaksin" src="/assets/img/fotojaksin.png" alt="" />
         </div>
 
         <div class="lista_about_me">
@@ -652,6 +699,42 @@
       <div class="colum_dos">
         <img src="/assets/img/imgreferencias.gif" alt="" />
       </div>
+    </section>
+
+    <section class="cont_mis_ultimos_proyectos">
+
+      <div class="titulo_ultimos_proyectos">
+        <h4>ULTIMOS PROYECTOS</h4>
+      </div>
+
+      <div class="cont_de_proyectos">
+
+        <a href="/projects/portafolio_daniel.html" class="proyecto  cursor-scale small">
+          <p> Portafolio daniel</p>
+          <img src="/assets/img/mockupjannieruno.jpg" alt="">
+          <div id="target" class="cont_boton_ver_proyecto"> <p class="boton_ver_proyecto">Ver proyecto</p></div>
+        </a>
+
+        <a href="/projects/portafolio_daniel.html" class="proyecto  cursor-scale small">
+          <p> Portafolio daniel</p>
+          <img src="/assets/img/mockupjannieruno.jpg" alt="">
+          <div id="targetdos" class="cont_boton_ver_proyecto"> <p id="botondos" class="boton_ver_proyecto">Ver proyecto</p></div>
+        </a>
+
+        <a href="/projects/portafolio_daniel.html" class="proyecto  cursor-scale small">
+          <p> Portafolio daniel</p>
+          <img src="/assets/img/mockupjannieruno.jpg" alt="">
+          <div id="targettres" class="cont_boton_ver_proyecto"> <p id="botontres" class="boton_ver_proyecto">Ver proyecto</p></div>
+        </a>
+
+        <a href="/projects/portafolio_daniel.html" class="proyecto  cursor-scale small">
+          <p> Portafolio daniel</p>
+          <img src="/assets/img/mockupjannieruno.jpg" alt="">
+          <div id="targetcuatro" class="cont_boton_ver_proyecto"> <p id="botoncuatro" class="boton_ver_proyecto">Ver proyecto</p></div>
+        </a>
+        
+      </div>
+
     </section>
 
     <section class="cont_animacionmiskills_vertical">
@@ -978,38 +1061,6 @@
           </div>
         </div>
       </div>
-    </section>
-
-    <section class="cont_mis_ultimos_proyectos">
-
-      <div class="titulo_ultimos_proyectos">
-        <h4>ULTIMOS PROYECTOS</h4>
-      </div>
-
-      <div class="cont_de_proyectos">
-
-        <a href="/projects/portafolio_daniel.html"  class="proyecto  cursor-scale small">
-          <p> Portafolio daniel</p>
-          <img src="/assets/img/mockupjannieruno.jpg" alt="">
-        </a>
-
-        <a href="/projects/portafolio_daniel.html"  class="proyecto  cursor-scale small">
-          <p> Portafolio daniel</p>
-          <img src="/assets/img/mockupjannieruno.jpg" alt="">
-        </a>
-
-        <a href="/projects/portafolio_daniel.html"  class="proyecto  cursor-scale small">
-          <p> Portafolio daniel</p>
-          <img src="/assets/img/mockupjannieruno.jpg" alt="">
-        </a>
-
-        <a href="/projects/portafolio_daniel.html"  class="proyecto  cursor-scale small">
-          <p> Portafolio daniel</p>
-          <img src="/assets/img/mockupjannieruno.jpg" alt="">
-        </a>
-        
-      </div>
-
     </section>
 
     <section class="pie_de_pagina">
