ajuste a seccion ultimos proyectos

--- a/pages/inicio.html
+++ b/pages/inicio.html
@@ -704,7 +704,7 @@
     <section class="cont_mis_ultimos_proyectos">
 
       <div class="titulo_ultimos_proyectos">
-        <h4>ULTIMOS PROYECTOS</h4>
+        <h4>Ultimos proyectos</h4>
       </div>
 
       <div class="cont_de_proyectos">
@@ -766,7 +766,7 @@
 
       <div id="uno" class="segundo_section_inicio">
         <div class="cont_titulo">
-          <h4>UI - DEGNER</h4>
+          <h4>UI - DESIGNER</h4>
           <div class="num_titulo_skils">
             <p>01</p>
           </div>
@@ -857,7 +857,7 @@
         class="segundo_section_inicio"
       >
         <div class="cont_titulo">
-          <h4>UX - DEGNER</h4>
+          <h4>UX - DESIGNER</h4>
           <div class="num_titulo_skils">
             <p>02</p>
           </div>
